--- a/link/templates/link/index.html
+++ b/link/templates/link/index.html
@@ -5,13 +5,11 @@
 {% endblock %}
 
 {% block main %}
-  <main class="container mb-5">
-    <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-      <h1 class="display-3 fw-bold mt-5">Простой и удобный сервис</h1>
-      <p class="lead">Делаем работу быстро и качественно</p>
-      <!-- <button class="btn btn-lg btn-primary" href="uslugi">Посмотреть услуги</button> -->
-      <a class="btn btn-lg btn-primary shadow-lg rounded" href="{% url 'uslugi' %}">Посмотреть услуги</a>
+  <main class="form">
+    <div class="form__div">
+      <h1 class="">Простой и удобный сервис</h1>
+      <p class="form__p">Делаем работу быстро и качественно</p>
+      <a class="form__button" href="{% url 'uslugi' %}">Посмотреть услуги</a>
     </div>
   </main>
-    <!-- {{ news }} -->
 {% endblock %}
