--- a/link/templates/link/link_form.html
+++ b/link/templates/link/link_form.html
@@ -5,16 +5,15 @@
 {% endblock %}
 
 {% block main %}
-  <main class="mb-5">
-    <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto">
-      <h2 class="fw-bold my-5">{{ title }}</h2>
-    <form method="post" class="container form-register p-5 shadow-lg rounded">
-      {% csrf_token %}
-      {{ form.as_p }}
-      <button class="btn btn-warning my-5" type="submit">{{ btn_text }}</button>
-    </form>
-  <hr class="mt-4">
-    <!-- <a href="{% url 'user' %}"><button class="btn btn-primary ms-2" type="submit">Уже зарегистрированы?</button></a> -->
+  <main class="form">
+    <div class="form__div">
+      <h2 class="form__h2">{{ title }}</h2>
+      <form method="post" class="">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button class="form__button" type="submit">{{ btn_text }}</button>
+      </form>
+      <hr class="">
     </div>
   </main>
 {% endblock %}
