--- a/link/templates/link/link.html
+++ b/link/templates/link/link.html
@@ -5,31 +5,22 @@
 {% endblock %}
 
 {% block main %}
-
-  <h2 class="mb-5">Новости</h2>
-
-  <form class="p-5">
-    <div class="container">
-
+  <form class="form">
+    <div class="form__div">
+      <h2 class="form__h2">Ссылки</h2>
       {% for post in link %}
       {% if post.autor == user %}
-        <h3 class="ms-5">{{ post.title }}</h3>
+        <h3 class="form__h3">{{ post.title }}</h3>
         <hr>
         <p>{{ post.slug }}</p>
-        <div class="d-flex">
-          <div class="ms-3">
-
+        <div class="">
             <p>Автор: <b>{{ post.autor }}</b></p>
-
-          </div>
         </div>
-        <hr class="mb-3">
-
-        <a href="{% url 'link-detail' post.slug %}" class="btn btn-warning mt-1 mb-5 ms-2 shadow-lg">Читать далее</a>
+        <hr class="">
+        <a href="{% url 'link-detail' post.slug %}" class="form__button">Читать далее</a>
       {% endif %}
       {% endfor %}
     </div>
-    <a href="{% url 'link-add' %}" class="btn btn-warning mt-1 mb-5 ms-2 shadow-lg">Добавить статью</a>
+    <a href="{% url 'link-add' %}" class="form__button">Добавить ссылку</a>
   </form>
-
 {% endblock %}
