--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -5,31 +5,18 @@
 {% endblock %}
 
 {% block main %}
-
-<div class="pricing-header px-3 pt-2 pt-md-5 pb-md-4 mx-auto">
-  <h2 class="fw-bold my-5">Кабинет пользователя</h2>
-</div>
-  <form method="post" enctype="multipart/form-data" class="">
-    <div class="form-register mt-3 p-5 container shadow-lg rounded">
-
-      <div class="container d-flex border rounded border-secondary">
-        <img class="shadow-lg rounded border my-3 mx-3 border-light" width="128" height="128" src="{{ user.profile.img.url }}">
-        <div class="mt-4 lead fw-bold">
-
+  <form method="post" enctype="multipart/form-data" class="form">
+    <div class="form__div">
+      <h2 class="form__h2">Кабинет пользователя</h2>
           @{{ user.username }}
           <br><br>
-
           {% if user.email %}
           <b>E-mail: </b>{{ user.email }}
           {% endif %}
-
-        </div>
-      </div>
-
       {% csrf_token %}
       {{ updateUserForm.as_p }}
       {{ profileForm.as_p }}
-      <button class="btn btn-warning btn-lg shadow-lg rounded mt-5" type="submit">Обновить данные</button>
+      <button class="form__button" type="submit">Обновить данные</button>
     </div>
   </form>
 {% endblock %}
