--- a/link/templates/link/base.html
+++ b/link/templates/link/base.html
@@ -11,7 +11,7 @@
 <body>
   <header class="header">
     <a class="header__a" href="{% url 'home' %}">
-      <h2 class="header__h2">Обрезание</h2>
+      <h2 class="header__h2">Режем</h2>
     </a>
 
     <nav class="header__nav">
@@ -34,7 +34,7 @@
           </a>
         {% endif %}
       <a class="nav__button" href="{% url 'uslugi' %}">Услуги</a>
-      <a class="nav__button" href="{% url 'link' %}">Новости</a>
+      <a class="nav__button" href="{% url 'link' %}">Ссылки</a>
       <a class="nav__button" href="{% url 'about' %}">Про нас</a>
     </nav>
   </header>
