--- a/link/templates/link/index.html
+++ b/link/templates/link/index.html
@@ -8,8 +8,8 @@
   <main class="form">
     <div class="form__div">
       <h1 class="">Простой и удобный сервис</h1>
-      <p class="form__p">Делаем работу быстро и качественно</p>
-      <a class="form__button" href="{% url 'uslugi' %}">Посмотреть услуги</a>
+      <p class="form__p">Семь раз отмеряем, один раз отрезаем</p>
+      <a class="form__button" href="{% url 'link-add' %}">Легкое обрезание</a>
     </div>
   </main>
 {% endblock %}
