v 0.4 (вывод ссылок в профиль)

--- a/link/templates/link/base.html
+++ b/link/templates/link/base.html
@@ -33,9 +33,9 @@
           <button class="nav__button">Добавить статью</button>
           </a>
         {% endif %}
-      <a class="nav__button" href="{% url 'uslugi' %}">Услуги</a>
+<!--      <a class="nav__button" href="{% url 'uslugi' %}">Услуги</a>-->
       <a class="nav__button" href="{% url 'link' %}">Ссылки</a>
-      <a class="nav__button" href="{% url 'about' %}">Про нас</a>
+<!--      <a class="nav__button" href="{% url 'about' %}">Про нас</a>-->
     </nav>
   </header>
   <main class="form">
