--- a/link/templates/link/link_delete.html
+++ b/link/templates/link/link_delete.html
@@ -7,7 +7,7 @@
 {% block main %}
   <main class="form">
     <div class="form__div">
-      <h2 class="form__h2">Вы точно хотите удалить ссылку {{ object.title }}</h2>
+      <p class="form__h2">Вы точно хотите удалить ссылку {{ object.title }}</p>
       <form method="post" class="">
         {% csrf_token %}
         <hr class="ащкь__рк">
