--- a/link/templates/link/link_detail.html
+++ b/link/templates/link/link_detail.html
@@ -8,7 +8,7 @@
   <form class="form">
     <div class="form__div">
       <h2 class="form__h2">Ссылки</h2>
-      <h3 class="">{{ object.title }}</h3>
+      <p class="">{{ object.title }}</p>
       <hr>
       <a href="{{ post.long_link }}" target="blank"><p>link/{{ post.slug }}</p></a>
       <div class="">
