--- a/link/templates/link/link_detail.html
+++ b/link/templates/link/link_detail.html
@@ -10,7 +10,7 @@
       <h2 class="form__h2">Ссылки</h2>
       <p class="">{{ object.title }}</p>
       <hr>
-      <a href="{{ post.long_link }}" target="blank"><p>link/{{ post.slug }}</p></a>
+      <a href="{{ object.long_link }}" target="blank"><span>link/{{ object.slug }}</span></a>
       <div class="">
         <div class="">
           <p>Владелец: <b>{{ object.autor }}</b></p>
