--- a/link/templates/link/base.html
+++ b/link/templates/link/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -30,7 +31,7 @@
           <button class="nav__button">Выйти</button>
           </a>
           <a href="{% url 'link-add' %}" class="nav__reg">
-          <button class="nav__button">Добавить статью</button>
+          <button class="nav__button">Добавить ссылку</button>
           </a>
         {% endif %}
 <!--      <a class="nav__button" href="{% url 'uslugi' %}">Услуги</a>-->
